fix for card alignment after dealer hole card reveal

--- a/main.css
+++ b/main.css
@@ -143,4 +143,5 @@ div[class*='suit']:after {
     animation-duration: .3s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+    left: 25px; 
 }
